<resources>
    <string name="app_name">씨네마천국</string>
    <string name="app_bar_movie_list">영화 목록</string>
    <string name="app_bar_review_write_name">한줄평 작성</string>
    <string name="app_bar_review_see_name">한줄평 목록</string>

    <string name="back">뒤로 가기</string>

    <string name="movie_release">개봉</string>
    <string name="movie_rank_number">예매율</string>
    <string name="movie_rank_text">위</string>
    <string name="movie_grade">평점</string>
    <string name="movie_cumulative_audience">누적관객수</string>
    <string name="movie_cumulative_audience_text">명</string>
    <string name="movie_contents">줄거리</string>
    <string name="movie_performer">감독/출연</string>
    <string name="movie_director">감독</string>
    <string name="movie_actor">출연</string>
    <string name="movie_oneline_review">한줄평</string>
    <string name="movie_write_review">작성하기</string>
    <string name="movie_see_review">모두 보기</string>
    <string name="movie_book">예매하기</string>
    <string name="movie_detail">상세보기</string>

    <string name="item_time_diff">분전</string>
    <string name="item_recommend">추천</string>
    <string name="item_report">신고하기</string>

    <string name="review_grade_text">평점을 입력해주세요</string>
    <string name="review_letter_limit_text">100자 이내로 작성해주세요</string>
    <string name="review_save">저장</string>
    <string name="review_cancel">취소</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_header_description">Navigation header</string>

    <string name="menu_list">영화 목록</string>
    <string name="menu_api">영화 API</string>
    <string name="menu_book">예매하기</string>
    <string name="menu_settings">설정</string>
    <string name="menu_user_settings">사용자 설정</string>

    <!-- 변동 텍스트임에도 불구하고 내용이 길어서 여기에 정의했습니다. -->
    <string name="contents1">군도, 백성을 구하라! 양반과 탐관오리들의 착취가 극에 달했던 조선 철종 13년. 힘 없는 백성의 편이 되어 세상을 바로잡고자 하는 의적떼인 군도(群盜), 지리산 추설이 있었다. 쌍칼 도치 vs 백성의 적 조윤 잦은 자연재해, 기근과 관의 횡포까지 겹쳐 백성들의 삶이 날로 피폐해 져 가는 사이, 나주 대부호의 서자로 조선 최고의 무관 출신인 조윤은 극악한 수법으로 양민들을 수탈, 삼남지방 최고의 대부호로 성장한다. 한편 소, 돼지를 잡아 근근이 살아가던 천한 백정 돌무치는 죽어도 잊지 못할 끔찍한 일을 당한 뒤 군도에 합류. 지리산 추설의 신 거성(新 巨星) 도치로 거듭난다. 뭉치면 백성, 흩어지면 도적! 망할 세상을 뒤집기 위해, 백성이 주인인 새 세상을 향해 도치를 필두로 한 군도는 백성의 적, 조윤과 한 판 승부를 시작하는데…</string>
    <string name="contents2">비밀리에 제작된 위조 지폐 동판을 탈취하려는 내부 조직에 의해 작전 중 아내와 동료들을 잃게 된 특수 정예부대 출신의 북한형사 ‘림철령’(현빈). 동판을 찾아야만 하는 북한은 남한으로 숨어든 조직의 리더 ‘차기성’(김주혁)을 잡기 위해 역사상 최초의 남북 공조수사를 요청하고, 그 적임자로 철령을 서울에 파견한다. 한편, 북한의 속내가 의심스런 남한은 먼저 차기성을 잡기 위한 작전을 계획하고, 정직 처분 중인 생계형 형사 ‘강진태’(유해진)에게 공조수사를 위장한 철령의 밀착 감시를 지시한다. 임무를 완수해야 하는 철령과 임무를 막아야만 하는 진태. 그들에게 주어진 시간은 단 3일, 한 팀이 될 수 없는 남북 형사의 예측불가 공조수사가 시작된다!</string>
    <string name="contents3">무소불위 권력을 쥐고 폼 나게 살고 싶었던 태수는 우여곡절 끝에 권력의 설계자 한강식을 만나 핵심 라인을 타고 승승장구 하게 된다 정권이 교체되는 중요한 시기, 새로운 판을 짜며 기회를 노리던 이들 앞에 예상치 못한 위기가 닥치는데… 대한민국이 속 시원하게 뒤집힌다!</string>
    <string name="contents4">엄브렐라가 개발한 치명적인 T-바이러스가 전 세계에 퍼지고, 바이러스에 감염된 언데드들이 세상을 뒤덮는다. 인류의 유일한 희망인 ‘앨리스’(밀라 요보비치)는 폐허가 된 도시를 떠돌던 중 엄브렐라가 T-바이러스를 해독할 백신 개발에 성공했다는 것을 알게 된다. 그녀는 백신을 손에 넣기 위해 모든 사건의 시발점이자 엄브렐라의 본거지인 ‘라쿤 시티’로 돌아가 모든 것을 끝낼 마지막 전쟁을 시작하는데. 생존자들을 구하기 위해 주어진 시간은 48시간. 인류 최후의 전사 앨리스의 마지막 전쟁이 시작된다!</string>
    <string name="contents5">냉혹한 킬러 형욱(유해진)은 사건 처리 후 우연히 들른 목욕탕에서 비누를 밟고 넘어져 과거의 기억을 잃게 된다. 인기도, 삶의 의욕도 없어 죽기로 결심한 무명배우 재성(이준)은 신변 정리를 위해 들른 목욕탕에서 그런 형욱을 보게 되고, 자신과 그의 목욕탕 키를 바꿔 도망친다. 이후 형욱은 자신이 재성이라고 생각한 채, 배우로 성공하기 위해 노력하는데… 인생에 단 한번 찾아온 초대형 기회! 초특급 반전! 이것이 LUCK.KEY다!</string>
    <string name="contents6">강력계 형사 한도경(정우성)은 이권과 성공을 위해 각종 범죄를 저지르는 악덕시장 박성배(황정민)의 뒷일을 처리해주는 대가로 돈을 받는다. 악에 계속 노출되는 사이, 말기 암 환자인 아내의 병원비를 핑계로 돈 되는 건 뭐든 하는 악인의 길로 들어서게 된 한도경. 그의 약점을 쥔 독종 검사 김차인(곽도원)과 검찰수사관 도창학(정만식)은 그를 협박하고 이용해 박성배의 비리와 범죄 혐의를 캐려 한다. 각자의 이익과 목적을 위해 한도경의 목을 짓누르는 검찰과 박성배. 그 사이 태풍의 눈처럼 되어 버린 한도경은, 자신을 친형처럼 따르는 후배 형사 문선모(주지훈)를 박성배의 수하로 들여보내고, 살아남기 위해 혈안이 된 나쁜 놈들 사이에서 서로 물지 않으면 물리는 지옥도가 펼쳐진다.</string>
</resources>